Model in progress. Started on the binding Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>