@@ -14,31 +14,11 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
-    <name>SmallRye: MicroProfile AsyncAPI Parent</name>
+    <name>SmallRye: AsyncAPI</name>
     <url>http://smallrye.io</url>
 
     <properties>
-        <version.buildhelper.plugin>3.0.0</version.buildhelper.plugin>
-        <version.jar.plugin>3.2.0</version.jar.plugin>
-
-        <version.com.fasterxml.jackson>2.11.2</version.com.fasterxml.jackson>
-        <version.com.fasterxml.jackson.databind>2.10.1</version.com.fasterxml.jackson.databind>
-        <version.com.fasterxml.jackson.dataformat>2.11.2</version.com.fasterxml.jackson.dataformat>
-        <version.commons-beanutils>1.9.4</version.commons-beanutils>
-        <version.commons-logging>1.2</version.commons-logging>
-        <version.eclipse.microprofile.config>1.4</version.eclipse.microprofile.config>
-        <version.io.smallrye.smallrye-config>1.8.5</version.io.smallrye.smallrye-config>
-        <version.jakarta.validation>2.0.1</version.jakarta.validation>
-        <version.org.hamcrest>1.3</version.org.hamcrest>
-        <version.org.hamcrest.java-hamcrest>2.0.0.0</version.org.hamcrest.java-hamcrest>
-        <version.org.jboss.shrinkwrap>1.2.6</version.org.jboss.shrinkwrap>
-        <version.org.skyscreamer>1.5.0</version.org.skyscreamer>
-        <version.org.jboss.resteasy.core-spi>4.5.6.Final</version.org.jboss.resteasy.core-spi>
-        
-        <!-- Apicurio Data Models -->
-        <version.apicurio-data-models>1.1.4</version.apicurio-data-models>
-
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tck/target/site/jacoco-aggregate/jacoco.xml,${project.basedir}/../tck/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <version.smallrye-common>1.3.0</version.smallrye-common>
     </properties>
 
     <licenses>
@@ -61,150 +41,50 @@
     </scm>
 
     <modules>
-        <module>spec/api</module>
-        <module>spec/tck</module>
-
+        <module>api</module>
         <module>implementation</module>
-        <module>tck</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
-            <!-- MP Config -->
-            <dependency>
-                <groupId>org.eclipse.microprofile.config</groupId>
-                <artifactId>microprofile-config-api</artifactId>
-                <version>${version.eclipse.microprofile.config}</version>
-            </dependency>
-
-            <!-- SmallRye Projects -->
-            <dependency>
-                <groupId>io.smallrye.config</groupId>
-                <artifactId>smallrye-config</artifactId>
-                <version>${version.io.smallrye.smallrye-config}</version>
-            </dependency>
-
-            <!-- Apicurio Data Models -->
-            <dependency>
-                <groupId>io.apicurio</groupId>
-                <artifactId>apicurio-data-models</artifactId>
-                <version>${version.apicurio-data-models}</version>
-            </dependency>
-
-            <!-- Specifications -->
-            <dependency>
-                <groupId>jakarta.validation</groupId>
-                <artifactId>jakarta.validation-api</artifactId>
-                <version>${version.jakarta.validation}</version>
-            </dependency>
-
-            <!-- Third Party Libraries -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-core</artifactId>
-                <version>${version.com.fasterxml.jackson}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${version.com.fasterxml.jackson.databind}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.dataformat</groupId>
-                <artifactId>jackson-dataformat-yaml</artifactId>
-                <version>${version.com.fasterxml.jackson.dataformat}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.shrinkwrap</groupId>
-                <artifactId>shrinkwrap-api</artifactId>
-                <version>${version.org.jboss.shrinkwrap}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.shrinkwrap</groupId>
-                <artifactId>shrinkwrap-impl-base</artifactId>
-                <version>${version.org.jboss.shrinkwrap}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-beanutils</groupId>
-                <artifactId>commons-beanutils</artifactId>
-                <version>${version.commons-beanutils}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-all</artifactId>
-                <version>${version.org.hamcrest}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>java-hamcrest</artifactId>
-                <version>${version.org.hamcrest.java-hamcrest}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.resteasy</groupId>
-                <artifactId>resteasy-core-spi</artifactId>
-                <version>${version.org.jboss.resteasy.core-spi}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.skyscreamer</groupId>
-                <artifactId>jsonassert</artifactId>
-                <version>${version.org.skyscreamer}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>commons-logging</groupId>
-                <artifactId>commons-logging</artifactId>
-                <version>${version.commons-logging}</version>
-                <scope>test</scope>
-            </dependency>
-
+            
+            
             <!-- Dependencies provided by the project -->
             <dependency>
-                <groupId>io.smallrye</groupId>
-                <artifactId>smallrye-async-api-spec-api</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.smallrye</groupId>
-                <artifactId>smallrye-async-api-spec-tck</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.smallrye</groupId>
-                <artifactId>smallrye-async-api</artifactId>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>smallrye-async-api-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${version.jar.plugin}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>{version.buildhelper.plugin}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
+    
     <profiles>
         <profile>
-            <id>release</id>
+            <id>jdk11plus</id>
             <activation>
-                <property>
-                    <name>!release.maven.bug.always.be.active</name>
-                </property>
+                <jdk>[11,)</jdk>
             </activation>
-            <modules>
-                <module>release</module>
-            </modules>
+            <properties>
+                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <configuration>
+                            <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+                            <docletArtifact>
+                                <groupId>nl.talsmasoftware</groupId>
+                                <artifactId>umldoclet</artifactId>
+                                <version>2.0.12</version>
+                            </docletArtifact>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
